--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem</p>
+    <p>Lore</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, dicta? Nemo, omnis mollitia! Excepturi, neque voluptas? Adipisci ipsa exercitationem deserunt labore explicabo illo, laboriosam eos consequuntur impedit ullam! Saepe, suscipit!</p>
 </body>
 </html>
